--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,8 +1,8 @@
 nelmio_api_doc:
     documentation:
         info:
-            title: BileMo
-            description: This is an awesome app!
+            title: BileMoAPI
+            description: BileMo is a company offering a variety of premium mobile phones.
             version: 1.0.0
         components:
             securitySchemes:
