--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,12 +18,12 @@ security:
             pattern: ^/api/doc
             security: false
         login:
-            pattern: ^/api/login
+            pattern: ^/api/login/
             stateless: true
             anonymous: true
             provider: app_user_provider
             json_login:
-                check_path: /api/login
+                check_path: /api/login/
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
 
